<resources>
    <string name="app_name">RomanCalculator</string>

    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button0">0</string>
    <string name="buttonConvert">CONVERT</string>
    <string name="buttonClear">CLEAR</string>
    <string name="buttonM">M</string>
    <string name="buttonD">D</string>
    <string name="buttonC">C</string>
    <string name="buttonL">L</string>
    <string name="buttonX">X</string>
    <string name="buttonV">V</string>
    <string name="buttonI">I</string>
    <string name="buttonPlus">+</string>
    <string name="buttonMinus">-</string>
    <string name="intConverter">Convert To Int</string>
    <string name="romToIntButton">Roman To Integer</string>
    <string name="intToRomButton">Integer To Roman</string>
    <string name="buttonEqual">=</string>
</resources>